--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <li class="button btn">
             <a
               class="anchor"
-              href="./Rjobs/piano/index.html"
+              href="./jobs/piano/index.html"
               target="_blank"
               rel="noopener noreferrer"
               >Piano</a
