--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <li class="button btn">
             <a
               class="anchor"
-              href="jobs/Calculator/index.html"
+              href="jobs/calculator/index.html"
               target="_blank"
               rel="noopener noreferrer"
               >Calculator</a
